--- a/prac1.html
+++ b/prac1.html
@@ -8,9 +8,11 @@
 <body>
     <h1>THIS IS MY FIRST WEBSITE</h1>
     <h2>Hope you like it!!</h2>
-    <h2></h2>
+    <h2>I am just learning</h2>
     <img src="https://lh3.googleusercontent.com/ci/AL18g_R_m1iMPLbAvnTrPVXv7tbJ_dwUU5kAOalV2LOz77AqwsL-4iFZT2a9RYUxqnIR7hxnB5Jnt5XV=s1200" alt="a cute panda" height="400"></img>
+   
     <footer>Thank you for visiting</footer>
     
 </body>
+
 </html>
