--- a/prac1.html
+++ b/prac1.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first website</title>
+    <style>
+        body{
+            background-color: aquamarine;
+        }
+    </style>
 </head>
 <body>
-    <h1>THIS IS MY FIRST WEBSITE</h1>
+    <h1>THIS IS MY FIRST WEBSITE😎</h1>
     <h2>Hope you like it!!</h2>
-    <p>Since I've only used HTML, the page is incredibly lightweight and loads very quickly. There's no heavy JavaScript or complex CSS to slow it down, which means a great experience for visitors.</p>
-    <img src="https://lh3.googleusercontent.com/ci/AL18g_R_m1iMPLbAvnTrPVXv7tbJ_dwUU5kAOalV2LOz77AqwsL-4iFZT2a9RYUxqnIR7hxnB5Jnt5XV=s1200" alt="a cute panda" height="400"></img>
-   
+    <h2></h2>
+    <center><img src="https://lh3.googleusercontent.com/ci/AL18g_R_m1iMPLbAvnTrPVXv7tbJ_dwUU5kAOalV2LOz77AqwsL-4iFZT2a9RYUxqnIR7hxnB5Jnt5XV=s1200" alt="a cute panda" height="400"></img></center>
     <footer>Thank you for visiting</footer>
-    
+    <i>Goodbye</i>
 </body>
-
 </html>
-
