--- a/prac1.html
+++ b/prac1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first website</title>
+    <title>First website</title>
     <style>
         body{
             background-color: aquamarine;
@@ -16,7 +16,8 @@
     <h2></h2>
     <center><img src="https://lh3.googleusercontent.com/ci/AL18g_R_m1iMPLbAvnTrPVXv7tbJ_dwUU5kAOalV2LOz77AqwsL-4iFZT2a9RYUxqnIR7hxnB5Jnt5XV=s1200" alt="a cute panda" height="400"></img></center>
     <footer>Thank you for visiting</footer>
-    <i>Goodbye</i>
+    <i><u>Goodbye</u></i>
 </body>
 
 </html>
+
