--- a/prac1.html
+++ b/prac1.html
@@ -13,11 +13,16 @@
 <body>
     <h1>THIS IS MY FIRST WEBSITE</h1>
     <h2>Hope you like it!!</h2>
-    <h2></h2>
+    <h2>
+        <p>
+            This site is a showcase of my work and a place to share my experiences. Since it is built using only HTML, it is designed to be as straightforward and accessible as possible, focusing on content over complex design.
+        </p>
+    </h2>
     <center><img src="https://lh3.googleusercontent.com/ci/AL18g_R_m1iMPLbAvnTrPVXv7tbJ_dwUU5kAOalV2LOz77AqwsL-4iFZT2a9RYUxqnIR7hxnB5Jnt5XV=s1200" alt="a cute panda" height="400"></img></center>
     <footer>Thank you for visiting</footer>
     <i><u>Goodbye</u></i>
 </body>
 
 </html>
+
 
