--- a/India.html
+++ b/India.html
@@ -17,7 +17,7 @@
     <p>India, officially the Republic of India, is a country in South Asia. It's the world's most populous country and the seventh-largest by land area. India has a vast coastline of over 7,500 kilometers, bordering the Arabian Sea to the west, the Bay of Bengal to the east, and the Indian Ocean to the south.</p>
     <tag><h2>importance</h2></tag>
     <p>India is the birthplace of four major world religions: Hinduism, Buddhism, Jainism, and Sikhism. It's also known for its rich and diverse cultural heritage, including its classical dances, music, and vibrant festivals like Diwali and Holi. India has made significant contributions to the world in mathematics, including the concept of zero and the decimal system, as well as in medicine, astronomy, and philosophy. It's home to the ancient Indus Valley Civilization, one of the world's oldest urban civilizations.</p>
-    <center><img src="https://thumbs.dreamstime.com/z/south-asia-map-bright-color-scheme-high-detailed-political-map-southern-asian-region-indian-subcontinent-country-south-199021150.jpg?ct=jpeg" alt="map of India" height="450" ></img></center>
+    <img src="https://thumbs.dreamstime.com/z/south-asia-map-bright-color-scheme-high-detailed-political-map-southern-asian-region-indian-subcontinent-country-south-199021150.jpg?ct=jpeg" alt="map of India" height="450" ></img>
     <h2>Places</h2>
     <h3>Delhi</h3>
     <p>
@@ -27,4 +27,5 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
     <p>The Taj Mahal is an ivory-white marble mausoleum located on the south bank of the Yamuna River in the city of Agra, Uttar Pradesh. It was commissioned in 1632 by the Mughal emperor, Shah Jahan, to house the tomb of his beloved wife, Mumtaz Mahal. The monument is the centerpiece of a vast complex that includes a mosque, a guesthouse, and a formal garden.</p>
     <center><img src="https://media.architecturaldigest.com/photos/67acb9b0339bcbaaadeb91b5/16:9/w_1280,c_limit/GettyImages-873536102.jpg" alt="Taj mahal" height="450"></img></center>
 </body>
+
 </html>
