--- a/India.html
+++ b/India.html
@@ -26,6 +26,8 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
     <h3>Taj Mahal</h3>
     <p>The Taj Mahal is an ivory-white marble mausoleum located on the south bank of the Yamuna River in the city of Agra, Uttar Pradesh. It was commissioned in 1632 by the Mughal emperor, Shah Jahan, to house the tomb of his beloved wife, Mumtaz Mahal. The monument is the centerpiece of a vast complex that includes a mosque, a guesthouse, and a formal garden.</p>
     <center><img src="https://media.architecturaldigest.com/photos/67acb9b0339bcbaaadeb91b5/16:9/w_1280,c_limit/GettyImages-873536102.jpg" alt="Taj mahal" height="450"></img></center>
+    <center><h6><i>fig.-TajMahal</i></h6></center>
 </body>
 
 </html>
+
