--- a/India.html
+++ b/India.html
@@ -27,7 +27,12 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
     <p>The Taj Mahal is an ivory-white marble mausoleum located on the south bank of the Yamuna River in the city of Agra, Uttar Pradesh. It was commissioned in 1632 by the Mughal emperor, Shah Jahan, to house the tomb of his beloved wife, Mumtaz Mahal. The monument is the centerpiece of a vast complex that includes a mosque, a guesthouse, and a formal garden.</p>
     <center><img src="https://media.architecturaldigest.com/photos/67acb9b0339bcbaaadeb91b5/16:9/w_1280,c_limit/GettyImages-873536102.jpg" alt="Taj mahal" height="450"></img></center>
     <center><h6><i>fig.-TajMahal</i></h6></center>
+
+     <h3>3.Red Fort</h3>
+    <p>The Red Fort, also known as Lal Qila, is a historical fort in Delhi, India, built by Mughal Emperor Shah Jahan in the 17th century. It served as the main residence of the Mughal emperors and is a UNESCO World Heritage site. The fort is known for its massive red sandstone walls and is a significant symbol of Mughal power and architectural brilliance.</p>
+    <center><img src="https://wanderwisdom.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MjAzNDMwNzE1ODA1NjcyNzk2/fort-agra-easy-peasy.webp" alt="red fort" height="300"></img></center>
 </body>
 
 </html>
+
 
