--- a/India.html
+++ b/India.html
@@ -30,11 +30,12 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
 
      <h3>3.Red Fort</h3>
     <p>The Red Fort, also known as Lal Qila, is a historical fort in Delhi, India, built by Mughal Emperor Shah Jahan in the 17th century. It served as the main residence of the Mughal emperors and is a UNESCO World Heritage site. The fort is known for its massive red sandstone walls and is a significant symbol of Mughal power and architectural brilliance.</p>
-    <center><img src="https://wanderwisdom.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MjAzNDMwNzE1ODA1NjcyNzk2/fort-agra-easy-peasy.webp" alt="red fort" height="300"></img></center>
-    
+    <center><img src="https://wanderwisdom.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MjAzNDMwNzE1ODA1NjcyNzk2/fort-agra-easy-peasy.webp" alt="red fort" height="400"></img></center>
+    <center><h5><i>fig.-Red Fort</i></h5></center>
 </body>
 
 </html>
+
 
 
 
