--- a/India.html
+++ b/India.html
@@ -32,9 +32,12 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
     <p>The Red Fort, also known as Lal Qila, is a historical fort in Delhi, India, built by Mughal Emperor Shah Jahan in the 17th century. It served as the main residence of the Mughal emperors and is a UNESCO World Heritage site. The fort is known for its massive red sandstone walls and is a significant symbol of Mughal power and architectural brilliance.</p>
     <center><img src="https://wanderwisdom.com/.image/c_limit%2Ccs_srgb%2Cq_auto:good%2Cw_700/MjAzNDMwNzE1ODA1NjcyNzk2/fort-agra-easy-peasy.webp" alt="red fort" height="400"></img></center>
     <center><h5><i><b>>fig.-Red Fort</b</i></h5></center>
+    <h3>Kolkata</h3>
+    <p>Kolkata, formerly known as Calcutta, is the capital of West Bengal, India. It's often called the "City of Joy" and is renowned as the cultural and intellectual hub of the country. With a rich history as the capital of British India from 1773 to 1911, the city is dotted with grand colonial-era architecture and historical landmarks.</p>
 </body>
 
 </html>
+
 
 
 
