--- a/India.html
+++ b/India.html
@@ -10,12 +10,12 @@
     <h1>About India</h1>
     <ol>
         <li>Overview</li>
-        <li>importance</li>
+        <li>Importance</li>
         <li>places</li>
     </ol>
     <tag><h2>About India</h2></tag>
     <p>India, officially the Republic of India, is a country in South Asia. It's the world's most populous country and the seventh-largest by land area. India has a vast coastline of over 7,500 kilometers, bordering the Arabian Sea to the west, the Bay of Bengal to the east, and the Indian Ocean to the south.</p>
-    <tag><h2>importance</h2></tag>
+    <tag><h2>Importance</h2></tag>
     <p>India is the birthplace of four major world religions: Hinduism, Buddhism, Jainism, and Sikhism. It's also known for its rich and diverse cultural heritage, including its classical dances, music, and vibrant festivals like Diwali and Holi. India has made significant contributions to the world in mathematics, including the concept of zero and the decimal system, as well as in medicine, astronomy, and philosophy. It's home to the ancient Indus Valley Civilization, one of the world's oldest urban civilizations.</p>
     <img src="https://thumbs.dreamstime.com/z/south-asia-map-bright-color-scheme-high-detailed-political-map-southern-asian-region-indian-subcontinent-country-south-199021150.jpg?ct=jpeg" alt="map of India" height="450" ></img>
     <h2>Places</h2>
@@ -38,6 +38,7 @@ Delhi, officially the National Capital Territory of Delhi (NCT), is a city and a
     <center><h5><i><b>fig.-Kolkata</b></i></h5></center>
 
 </html>
+
 
 
 
